Navbar fixed on mobile, other minor changes

--- a/css/main.css
+++ b/css/main.css
@@ -172,9 +172,11 @@ body {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) { 
     .bg nav ul li {
-        padding: 0.5em;
+        padding-left: 0.8em;
+        padding-right: 0.8em;
+        margin: 0;
     }
 
     .bottom .share-this-page ul li {
@@ -182,7 +184,7 @@ body {
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 420px) and (max-width: 768px) {
     .bg nav ul li {
         padding: 1.5em;
     }
